--- a/Tarefa 4/Tarefa 4_aprendizagem_de_máquina.ipynb
+++ b/Tarefa 4/Tarefa 4_aprendizagem_de_máquina.ipynb
@@ -387,14 +387,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Gradiente descendente convergiu com w0 = -0.003407119061521325, w1 = -0.02720456522599458, w2 = -0.007177979763415906, w3 = -0.032914855223787, w4 = -0.01245067215029663\n"
+      "Coeficientes: w0 = -0.003344782431728037, w1 = -0.026860387303040415, w2 = -0.006971360846545073, w3 = -0.032722560635187824, w4 = -0.01238640317713921\n"
      ]
     }
    ],
@@ -402,7 +402,7 @@
     "from sklearn.linear_model import SGDClassifier\n",
     "\n",
     "model_lreg = SGDClassifier(tol=epsilon, eta0=learning_rate, learning_rate='constant', loss='log', penalty='none').fit(X_new, y)\n",
-    "print(\"Gradiente descendente convergiu com w0 = {0}, w1 = {1}, w2 = {2}, w3 = {3}, w4 = {4}\".format(model_lreg.intercept_[0], model_lreg.coef_[0,0], model_lreg.coef_[0,1], model_lreg.coef_[0,2], model_lreg.coef_[0,3]))"
+    "print(\"Coeficientes: w0 = {0}, w1 = {1}, w2 = {2}, w3 = {3}, w4 = {4}\".format(model_lreg.intercept_[0], model_lreg.coef_[0,0], model_lreg.coef_[0,1], model_lreg.coef_[0,2], model_lreg.coef_[0,3]))"
    ]
   },
   {
