--- a/Tarefa 3/Tarefa 3_aprendizagem de maquina.ipynb
+++ b/Tarefa 3/Tarefa 3_aprendizagem de maquina.ipynb
@@ -1443,7 +1443,9 @@
   {
    "cell_type": "code",
    "execution_count": 92,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "solucao = pd.DataFrame({\"matricula\":test.matricula, \"cra\":predicao})\n",
@@ -1468,7 +1470,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.1"
+   "version": "3.6.3"
   }
  },
  "nbformat": 4,
